# smv-rs

./: .gitlab-ci.yml  .travis.yml  Cargo.toml  Dockerfile  README.md  codefresh.yml
cli/: Cargo.toml  README.md
cli/src/: main.rs
lib/: Cargo.toml  README.md
lib/src/: lib.rs  replace.rs  semver.rs
src/: main.rs  replace.rs  semver.rs
