[package]
name = "smv-cli"
version = "0.1.0"
authors = ["Chen Weiguang <chen.weiguang@gmail.com>"]
description = "CLI for SemVer manipulation"
edition = "2018"
readme = "README.md"
categories = ["command-line-utilities", "value-formatting"]
license = "MIT"

[dependencies]
structopt = "0.2.14"
failure = "0.1.5"
smv = { path = "../lib", version = "0.1.0" }

[badges]
travis-ci = { repository = "guangie88/smv-rs" }
codecov = { repository = "guangie88/smv-rs" }

[[bin]]
name = "smv"
path = "src/main.rs"
